--- a/style.css
+++ b/style.css
@@ -45,11 +45,11 @@ p {
 }
 
 button {
-    background-color: #333333;
-    border: none;
+    background-color:white;
+    border:none;
     color: white;
     text-transform: uppercase;
-    padding:12px;
-    font-size: 10px;
-    margin-top:25px;
+    padding:3px;
+    font-size: 12px;
+    margin-top:15px;
 }
